# Aptos-Tutorial

./: .gitignore  Move.toml  README.md  package.json  tsconfig.json
Baseline/: .gitignore  README.md  package-lock.json  package.json
Baseline/src/: main.ts  utility.ts
Tickets/: .gitignore  Cargo.toml  Move.toml
Tickets/sources/: TicketTutorial.move  TicketTutorialTest.move  TicketTutorialTests.move
Tickets/src/: lib.rs  main.rs  move_unit_tests.rs
Tickets/tests/: move_unit_tests.rs
sources/: MapTable.move  TicketTutorial.move
src/: main.ts  utility.ts
