[package]
name = "tutorial"
version = "0.1.0"
repository = "https://github.com/aptos-core/aptos-labs"
license = "Apache-2.0"
publish = false
edition = "2018"


[dependencies]
aptos-vm = { path = "../../aptos-core/aptos-move/aptos-vm" }
aptos-workspace-hack = { path = "../../aptos-core/crates/aptos-workspace-hack" }
framework = { path = "../../aptos-core/aptos-move/framework" }
structopt = "0.3.21"
move-compiler = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }
move-package = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }
move-stdlib = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }
move-unit-test = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }
